Converted new iOS Drums example to AudioKitUI

--- a/Examples/iOS/Drums/Drums/Base.lproj/Main.storyboard
+++ b/Examples/iOS/Drums/Drums/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13189.4" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="ipad9_7" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13165.3"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -28,19 +28,19 @@
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="tJX-bk-BlW">
                                         <rect key="frame" x="0.0" y="0.0" width="984" height="359"/>
                                         <subviews>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mTf-Xv-nRy" customClass="AKButton" customModule="AudioKit">
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mTf-Xv-nRy" customClass="AKButton" customModule="AudioKitUI">
                                                 <rect key="frame" x="0.0" y="0.0" width="238.5" height="359"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             </view>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4gy-ec-DOA" customClass="AKButton" customModule="AudioKit">
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4gy-ec-DOA" customClass="AKButton" customModule="AudioKitUI">
                                                 <rect key="frame" x="248.5" y="0.0" width="238.5" height="359"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             </view>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KoR-FE-oqb" customClass="AKButton" customModule="AudioKit">
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KoR-FE-oqb" customClass="AKButton" customModule="AudioKitUI">
                                                 <rect key="frame" x="497" y="0.0" width="238.5" height="359"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             </view>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cVg-wO-n76" customClass="AKButton" customModule="AudioKit">
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cVg-wO-n76" customClass="AKButton" customModule="AudioKitUI">
                                                 <rect key="frame" x="745.5" y="0.0" width="238.5" height="359"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             </view>
@@ -49,19 +49,19 @@
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="ZUK-25-Feg">
                                         <rect key="frame" x="0.0" y="369" width="984" height="359"/>
                                         <subviews>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pdb-1A-stp" customClass="AKButton" customModule="AudioKit">
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pdb-1A-stp" customClass="AKButton" customModule="AudioKitUI">
                                                 <rect key="frame" x="0.0" y="0.0" width="238.5" height="359"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             </view>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pwa-HT-sQd" customClass="AKButton" customModule="AudioKit">
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pwa-HT-sQd" customClass="AKButton" customModule="AudioKitUI">
                                                 <rect key="frame" x="248.5" y="0.0" width="238.5" height="359"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             </view>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ASD-hG-l5r" customClass="AKButton" customModule="AudioKit">
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ASD-hG-l5r" customClass="AKButton" customModule="AudioKitUI">
                                                 <rect key="frame" x="497" y="0.0" width="238.5" height="359"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             </view>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cLX-fa-ESR" customClass="AKButton" customModule="AudioKit">
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cLX-fa-ESR" customClass="AKButton" customModule="AudioKitUI">
                                                 <rect key="frame" x="745.5" y="0.0" width="238.5" height="359"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             </view>
