--- a/Examples/iOS/SongProcessor/SongProcessor/Base.lproj/Main.storyboard
+++ b/Examples/iOS/SongProcessor/SongProcessor/Base.lproj/Main.storyboard
@@ -612,22 +612,13 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5c3-d1-Ouk" customClass="AKPropertySlider" customModule="AudioKit">
-                                <rect key="frame" x="0.0" y="448" width="375" height="90"/>
+                                <rect key="frame" x="16" y="448" width="343" height="90"/>
                                 <color key="backgroundColor" red="0.33887624740600586" green="0.34637537598609924" blue="0.70782500505447388" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="90" id="Pyc-A6-et7"/>
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="string" keyPath="property" value="Volume"/>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="value">
-                                        <integer key="value" value="0"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="color" keyPath="textColor">
-                                        <color key="value" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="color" keyPath="sliderColor">
-                                        <color key="value" red="0.26453978187672944" green="0.27109190299991648" blue="0.56041498141845469" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                    </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2YX-l0-7ZU">
@@ -663,11 +654,11 @@
                             <constraint firstAttribute="trailing" secondItem="2YX-l0-7ZU" secondAttribute="trailing" id="EQ6-Da-eLa"/>
                             <constraint firstItem="cdy-Fo-35J" firstAttribute="top" secondItem="8SK-dA-Fi2" secondAttribute="bottom" constant="8" id="GWi-gA-2gR"/>
                             <constraint firstItem="fEe-G6-ZUT" firstAttribute="top" secondItem="5c3-d1-Ouk" secondAttribute="bottom" constant="80" id="Hhz-cO-mzz"/>
-                            <constraint firstItem="5c3-d1-Ouk" firstAttribute="trailing" secondItem="dP5-ci-Fv2" secondAttribute="trailingMargin" constant="16" id="Hw2-Kp-Su7"/>
+                            <constraint firstItem="5c3-d1-Ouk" firstAttribute="trailing" secondItem="dP5-ci-Fv2" secondAttribute="trailingMargin" id="Hw2-Kp-Su7"/>
                             <constraint firstItem="gXI-bJ-hiR" firstAttribute="centerX" secondItem="cdy-Fo-35J" secondAttribute="centerX" id="KVF-64-53C"/>
                             <constraint firstItem="OWS-Pq-g6h" firstAttribute="top" secondItem="2YX-l0-7ZU" secondAttribute="bottom" id="Kq4-HO-5Ae"/>
                             <constraint firstItem="2YX-l0-7ZU" firstAttribute="leading" secondItem="dP5-ci-Fv2" secondAttribute="leading" id="Kz6-GA-Mzf"/>
-                            <constraint firstItem="5c3-d1-Ouk" firstAttribute="leading" secondItem="dP5-ci-Fv2" secondAttribute="leadingMargin" constant="-16" id="Pya-9c-LzL"/>
+                            <constraint firstItem="5c3-d1-Ouk" firstAttribute="leading" secondItem="dP5-ci-Fv2" secondAttribute="leadingMargin" id="Pya-9c-LzL"/>
                             <constraint firstItem="gXI-bJ-hiR" firstAttribute="height" secondItem="cdy-Fo-35J" secondAttribute="height" id="QMd-ZG-edE"/>
                             <constraint firstAttribute="centerX" secondItem="cdy-Fo-35J" secondAttribute="centerX" id="TUV-nK-ZII"/>
                             <constraint firstItem="gXI-bJ-hiR" firstAttribute="width" secondItem="QxG-WJ-ND8" secondAttribute="width" id="Zpx-01-isd"/>
